manifests/VRspace/vrspace-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: vrspace
  name: vrspace
  namespace: vrspace
spec:
  rules:
  - host: ${VRSPACE_SERVER_URL}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vrspace
            port:
              number: 8080
  tls:
  - hosts:
    - ${VRSPACE_SERVER_URL}
    secretName: tls-secret
